export const snapshot = {};

snapshot[`Issue Comment Add Command - With Body Flag 1`] = `
stdout:
"✓ Comment added to TEST-123
https://linear.app/issue/TEST-123#comment-uuid-456
"
stderr:
""
`;

snapshot[`Issue Comment Add Command - With Parent Flag 1`] = `
stdout:
"✓ Comment added to TEST-123
https://linear.app/issue/TEST-123#comment-uuid-reply-789
"
stderr:
""
`;

snapshot[`Issue Comment Add Command - Help 1`] = `
stdout:
"
Usage: add <issue>

Writes: true     
Interactive: true

Description:

  Add a comment, or reply in an existing thread with --parent <commentId>. Images uploaded with --attach render inline. Accepts an issue UUID,
  identifier (e.g. ENG-123), number in the configured team, or Linear URL.                                                                    
                                                                                                                                              
  For API Markdown bodies, prefer a bare Linear URL for mentions.                                                                             
  Named profile links can also mention people; \`@name\` handling varies by body.                                                               
  Get a person's canonical \`url\` from                                                                                                         
  \`linear team members <TEAM> --json\` or \`linear user list --json\`.                                                                           
  Run \`linear guide markdown\` for mentions, collapsible sections and rewrite risks.                                                           

Options:

  -h, --help                 - Show this help.                                                                                     
  -b, --body    <body>       - Comment body text                                                                                   
  --body-file   <path>       - Read UTF-8 comment body from a file (- for stdin)                                                   
  --edit                     - Open an editor, optionally seeded by --body or --body-file                                          
  -p, --parent  <commentId>  - Parent comment UUID for replies                                                                     
  -a, --attach  <path>       - Upload a file and add its Markdown link to the comment (images render inline; repeatable)           
  --public                   - Upload attached images to a public, unauthenticated URL (default: private, workspace-members only)  
  -j, --json                 - Output {ok, effect, data}; the created comment is in data.comment, its UUID in data.comment.id      

"
stderr:
""
`;
